Added some new lines

--- a/index.html
+++ b/index.html
@@ -16,12 +16,30 @@
     </style>
   </head>
   <body>
-    <img
-      src="images/dmitry-ganin-EhWzbMPQcqQ-unsplash.jpg"
-      alt="A woman photo"
-    />
-    <p class="username">@massaovictor</p>
-    <p>I love people. But people who dont understand what's love</p>
-    <p>Hello this is git tutorial</p>
+    <div class="row">
+      <img
+        src="images/dmitry-ganin-EhWzbMPQcqQ-unsplash.jpg"
+        alt="A woman photo"
+      />
+      <p class="username">@massaovictor</p>
+      <p>I love people. But people who dont understand what's love</p>
+      <p>Hello this is git tutorial</p>
+
+      <img
+        src="images/dmitry-ganin-EhWzbMPQcqQ-unsplash.jpg"
+        alt="A woman photo"
+      />
+      <p class="username">@massaovictor</p>
+      <p>I love people. But people who dont understand what's love</p>
+      <p>Hello this is git tutorial</p>
+
+      <img
+        src="images/dmitry-ganin-EhWzbMPQcqQ-unsplash.jpg"
+        alt="A woman photo"
+      />
+      <p class="username">@massaovictor</p>
+      <p>I love people. But people who dont understand what's love</p>
+      <p>Hello this is git tutorial</p>
+    </div>
   </body>
 </html>
