Added some new lines mail

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         src="images/dmitry-ganin-EhWzbMPQcqQ-unsplash.jpg"
         alt="A woman photo"
       />
-      <p class="username">@massaovictor</p>
+      <p class="username">@massaovicto@gmailr</p>
       <p>I love people. But people who dont understand what's love</p>
       <p>Hello this is git tutorial</p>
 
