--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         src="images/dmitry-ganin-EhWzbMPQcqQ-unsplash.jpg"
         alt="A woman photo"
       />
-      <p class="username">@massaovictor</p>
+      <p class="username">@massvictor</p>
       <p>I love people. But people who dont understand what's love</p>
       <p>Hello this is git tutorial</p>
     </div>
